syntax = "proto3";

import "map_renderer.proto";

package transport_proto;

message Coordinates {
    double lat = 1;
    double lng = 2;
}

message Stop {
    uint32 id = 1;
    string name = 2;
    Coordinates coord = 3;
}

message Bus {
    string name = 1;
    repeated uint32 route = 2;
    uint32 type = 3;
    double route_geo_length = 4;
    double route_true_length = 5;
    uint32 stops_on_route = 6;
    uint32 unique_stops = 7;
}

message RouteSettings {
    double bus_velocity = 1;
    uint32 bus_waiting_time = 2;
}

message TransportCatalogue {
    repeated Stop stop = 1;
    repeated Bus bus = 2;
    MapRenderSettings map_render_setting = 3;
    // RouteSettings route_settings = 4;
}
